infrastructures/modules/security-group/main.tf
resource "aws_security_group" "main" {
    name = "${var.project_name}-sg"
    vpc_id = var.vpc_id

    ingress {
        from_port=22
        to_port=22
        protocol="tcp"
        cidr_blocks=["0.0.0.0/0"]
    }

    ingress {
        from_port=80
        to_port=80
        protocol="tcp"
        cidr_blocks=["0.0.0.0/0"]
    }

    ingress {
        from_port=443
        to_port=443
        protocol="tcp"
        cidr_blocks=["0.0.0.0/0"]
    }

    egress {
        from_port=0
        to_port=0
        protocol="-1"
        cidr_blocks=["0.0.0.0/0"]
    }
}

resource "aws_security_group" "rds" {
  name = "${var.project_name}-rds-sg"
  description = "Allow PostgreSQL access from EC2"
  vpc_id = var.vpc_id

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-rds-sg"
  }
}

resource "aws_security_group_rule" "rds_from_ec2" {
  type = "ingress"
  security_group_id = aws_security_group.rds.id

  from_port = 5432
  to_port = 5432
  protocol = "tcp"

  source_security_group_id = aws_security_group.main.id
}
